syntax = "proto3";

package protos;

message ShortestPathAlgorithmParams {
    string from = 1;
    string to = 2;
}

message ShortestPathAlgorithmResult {
    int64 pathLength = 1;
}

message ShortestPathAlgorithmMessage {
    int64 pathLength = 1;
}